--- a/Proyecto Base/Proyecto/Game.vcxproj.filters
+++ b/Proyecto Base/Proyecto/Game.vcxproj.filters
@@ -66,4 +66,12 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Ejecutable\fragment.glsl">
+      <Filter>Archivos de recursos</Filter>
+    </None>
+    <None Include="..\Ejecutable\vertex.glsl">
+      <Filter>Archivos de recursos</Filter>
+    </None>
+  </ItemGroup>
 </Project>
